styled contact info

--- a/index.html
+++ b/index.html
@@ -144,12 +144,10 @@
         </section>
 
         <!-- Reach Out Section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13878.88193189082!2d-98.6189053!3d29.5827351!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x24e55c903c3a270c!2sThe%20University%20of%20Texas%20at%20San%20Antonio!5e0!3m2!1sen!2sus!4v1643816045835!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
